--- a/pyGestion nombre corregido.csproj
+++ b/pyGestion nombre corregido.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{199FA582-2F34-49AA-A879-5B846BD9335C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>pyControlesComunes_Variables</RootNamespace>
-    <AssemblyName>pyControlesComunes-Variables</AssemblyName>
+    <RootNamespace>pryGestionNombreCorregido_TomasCarranza</RootNamespace>
+    <AssemblyName>pryGestionNombreCorregido_TomasCarranza</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -95,6 +95,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
